--- a/templates/register.html
+++ b/templates/register.html
@@ -41,7 +41,7 @@
                     <div class="rule" id="special">至少一个特殊字符</div>
                 </div>
             </div>
-            <button type="submit">注册</button>
+            <button id="register_submit" type="submit">注册</button>
         </form>
 
         <p>已有账号？<a href="{{ url_for('login') }}">立即登录</a></p>
