--- a/templates/activate.html
+++ b/templates/activate.html
@@ -40,7 +40,7 @@
                 <label for="password">密码:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">激活账户</button>
+            <button id="activate_submit" type="submit">激活账户</button>
         </form>
 
         <p>激活后可以<a href="{{ url_for('login') }}">立即登录</a></p>
